fixed horizontal scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
 .App {
   display: grid;
   justify-items: center;
-  width: 1200px;
+  /* width: 1200px; */
+  /* width: 100vw; */
   margin: auto;
   min-height: 101vh;
 }
@@ -54,7 +55,8 @@ button {
 .shop-width {
   display: grid;
   /* margin: 25px; */
-  max-width: 1200px;
+  /* max-width: 1200px; */
+  width: 100%;
   justify-content: center;
 }
 
@@ -95,12 +97,14 @@ button {
 
 /* nav */
 .navbar {
-  width: 1200px;
+  /* width: 1200px; */
+  width: 100%;
   height: 100%;
   border-radius: 5px 5px 0 0;
 }
 .pages {
-  max-width: 1200px;
+  /* max-width: 1200px; */
+  width: 100%;
   border-radius: 5px;
   border-width: 0px;
 }
@@ -122,13 +126,7 @@ main {
   display: block !important;
 }
 
-@media screen and (max-width: 749px) {
-  .App {
-    width: 100vw;
-  }
-  .pages {
-    width: 100vw;
-  }
+@media screen and (max-width: 767px) {
   main {
     min-height: 80vh;
   }
@@ -136,7 +134,7 @@ main {
     margin: 5px;
   }
   .navbar {
-    width: 100vw;
+    /* width: 100vw; */
     height: 100%;
     border-radius: 5px 5px 0 0;
   }
